fix: remove dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,9 +4,9 @@ html {
   color-scheme: light;
 }
 
-html.dark {
+/* html.dark {
   color-scheme: dark;
-}
+} */
 
 body {
   background-color: white;
